RESOLVED FIXED 114535
When img@alt is undefined, WebKit should use @title as accessibility label if available
https://bugs.webkit.org/show_bug.cgi?id=114535
Summary When img@alt is undefined, WebKit should use @title as accessibility label if...
James Craig
Reported 2013-04-12 14:44:08 PDT
ARIA computation algorithm says to always fallback to the host language "tooltip" attribute (WebKit does not use @title as the label on IMG), but I think an explicitly empty alt attribute should override that on img. I've added a test case.
Attachments
test case demonstrating bug (539 bytes, text/html)
2013-04-12 14:47 PDT, James Craig
no flags
patch (3.82 KB, patch)
2013-04-15 10:58 PDT, chris fleizach
no flags
James Craig
Comment 1 2013-04-12 14:44:51 PDT
James Craig
Comment 2 2013-04-12 14:46:34 PDT
2. D. "The last resort is to use text from a tooltip attribute (such as the title attribute in HTML). This is used only if nothing else, including subtree content, has provided results." http://www.w3.org/WAI/PF/aria/complete#textalternativecomputation
James Craig
Comment 3 2013-04-12 14:47:37 PDT
Created attachment 197889 [details] test case demonstrating bug
Alexey Proskuryakov
Comment 4 2013-04-13 19:48:08 PDT
See also: bug 112842.
chris fleizach
Comment 5 2013-04-15 10:58:46 PDT
chris fleizach
Comment 6 2013-04-15 10:59:19 PDT
Adding Tim to help with review
WebKit Commit Bot
Comment 7 2013-04-17 09:41:31 PDT
Comment on attachment 198136 [details] patch Clearing flags on attachment: 198136 Committed r148617: <http://trac.webkit.org/changeset/148617>
WebKit Commit Bot
Comment 8 2013-04-17 09:41:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.