Source/WebCore: AX: When img@alt is undefined, WebKit should use @title as accessibility label if available https://bugs.webkit.org/show_bug.cgi?id=114535

Reviewed by Tim Horton.

Don't hide images from Accessibility that have the title attribute on them.

Test: accessibility/empty-image-with-title.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored):

LayoutTests: When img@alt is undefined, WebKit should use @title as accessibility label if available
https://bugs.webkit.org/show_bug.cgi?id=114535

Reviewed by Tim Horton.

* accessibility/empty-image-with-title-expected.txt: Added.
* accessibility/empty-image-with-title.html: Added.


Canonical link: https://commits.webkit.org/133141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148617 268f45cc-cd09-0410-ab3c-d52691b4dbfc